<resources>
    <string name="app_name">VibesLocal</string>

    <string name="pauseButtonContentDescription">toggle pause</string>
    <string name="tab_item_0">Playlists</string>
    <string name="tab_item_1">Albums</string>
    <string name="tab_item_2">Artists</string>
    <string name="tab_item_3">Genres</string>
    <string name="option_title">Option title</string>
    <string name="option_description">Option description</string>
    <string name="option_image">Option Image</string>
    <string name="base_time">0:00</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="thumnail_description">Thumbnail image</string>
    <string name="song_option">Song</string>
    <string name="queue_option">Queue</string>
    <string name="go_back_button">Go back button</string>
    <string name="song_thumbnail">Song thumbnail</string>
    <string name="previous">Play previous</string>
    <string name="next">Play next</string>
    <string name="pause_song_button">Pause song button</string>
</resources>