<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="8dp"
    android:paddingTop="8dp"
    android:paddingRight="8dp"
    android:paddingBottom="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        app:cardBackgroundColor="@color/surfaceVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/option_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/option_image"
                android:src="@drawable/unknown"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/option_title"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/option_title"
                android:textSize="15sp"
                app:flow_wrapMode="none"
                app:layout_constraintBottom_toTopOf="@+id/option_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/option_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_weight="5" />

            <TextView
                android:id="@+id/option_description"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingTop="2dp"
                android:paddingEnd="20dp"
                android:paddingBottom="2dp"
                android:text="@string/option_description"
                android:textSize="11sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/option_image"
                app:layout_constraintTop_toBottomOf="@+id/option_title"
                app:layout_constraintVertical_weight="3" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>